# code-challenge-2024-srikanth-iyengar

./: .gitignore  Cargo.toml  Makefile  SOLUTION.md  analyze  log  run.sh  serial  sha256sum  test.sh  tx
docs/: README.md  instruction_set.md
src/: assembler.rs  hash_utils.rs  interpreter.rs  macro_utils.rs  main.rs  merkle.rs  opcodes.rs  stack.rs  str_utils.rs  transaction.rs  tx_type.rs  utils.rs
src/test/: merkle_test.rs  transaction_tests.rs
src/utils/: assembler.rs  stack.rs  str.rs  tx_type.rs
test_tx/: test.json  test2.json  test3.json
