[package]
name = "mining"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
libsecp256k1 = "0.7.1"
ripemd = "0.1.3"
serde = { version= "1.0.197", features=["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
